cpp/roman-numerals/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.013s
user	0m0.001s
sys	0m0.009s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
[ 25%] Building CXX object CMakeFiles/roman-numerals.dir/roman_numerals_test.cpp.o
[ 50%] Building CXX object CMakeFiles/roman-numerals.dir/roman_numerals.cpp.o
[ 75%] Building CXX object CMakeFiles/roman-numerals.dir/test/tests-main.cpp.o
[100%] Linking CXX executable roman-numerals
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
[100%] Built target roman-numerals
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
===============================================================================
All tests passed (26 assertions in 26 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
[100%] Built target test_roman-numerals
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/roman-numerals.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/roman-numerals.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)20285"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
roman_numerals.cpp                             9       8    88%   9
roman_numerals_test.cpp                       78      78   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        121     113    93%
------------------------------------------------------------------------------
lines: 93.4% (113 out of 121)
branches: 37.9% (169 out of 446)

real	0m14.733s
user	0m13.473s
sys	0m1.257s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.182s
user	0m0.142s
sys	0m0.042s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.237s
user	0m0.181s
sys	0m0.059s

===============================================================================

Running: clang-format-16 -style=file -i ./roman_numerals.cpp ./roman_numerals_test.cpp ./roman_numerals.h

real	0m0.050s
user	0m0.032s
sys	0m0.018s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./roman_numerals.cpp ./roman_numerals_test.cpp ./roman_numerals.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/roman_numerals.h:4:10: fatal error: 'map' file not found
#include <map>
         ^~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/roman_numerals.h.

real	0m0.738s
user	0m0.688s
sys	0m0.049s


real	0m0.741s
user	0m0.688s
sys	0m0.052s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
14916 warnings generated.
51990 warnings generated.
51990 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/roman_numerals.h.
Suppressed 51995 warnings (51990 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m8.071s
user	0m7.994s
sys	0m0.076s
Running: clang-tidy-16 ./roman_numerals.cpp ./roman_numerals_test.cpp ./roman_numerals.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/roman-numerals/roman_numerals.h:4:10: error: 'map' file not found [clang-diagnostic-error]
#include <map>
         ^~~~~


real	0m8.073s
user	0m7.994s
sys	0m0.079s

===============================================================================

